--- a/about.html
+++ b/about.html
@@ -22,9 +22,10 @@
   <p>Built using HTML, CSS and JavaScript.</p>
 </div>
 <div class="center-box">
-  <a href="finaldraft.html">
+  <a href="index.html">
     <button class="launch-btn">🎮 Open Gaming Portal</button>
   </a>
 </div>
 </body>
+
 </html>
